--- a/A.tex
+++ b/A.tex
@@ -9,15 +9,15 @@ According to the definition of US FDA \cite{fda}, a medical device is "an instru
 \end{itemize}
 
 Failures or malfunctions of the medical devices can cause serious injury or death of the patient. Therefore the safety
-In general, medical devices according to their risk factors. In US, medical devices are categorized by FDA into 3 classes, Class I, Class II and Class III, corresponding to low-risk, medium-risk and high-risk devices \cite{class}. Life-sustaining devices like implantable pacemakers are classified as Class III and in general are subject to the strictest regulations. With similar philosophy, the EU directives classifies medical devices into 5 categories. (\cite{EU_classify}) The medical devices are also categorized according to their applications and functions by the Global Medical Device Nomenclature (GMDN). \figref{Cur} shows several medical devices and their classification in both EU directives and GMDN.
+In general, medical devices according to their risk factors. In US, medical devices are categorized by FDA into 3 classes, Class I, Class II and Class III, corresponding to low-risk, medium-risk and high-risk devices \cite{class}. With similar philosophy, the EU directives classifies medical devices into 5 categories. (\cite{EU_classify}) The medical devices are also categorized according to their applications and functions by the Organisation for Economic Co-operation and Development (OECD)\cite{OECD}. \figref{Cur} shows several medical devices and their classification in both EU directives and GMDN.
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=0.8\textwidth]{figs/devices.png}
-		\caption{\small Figure of current medical devices (\cite{GMDN})}
+		\caption{\small Figure of current medical devices (Remade from the presentation by \cite{classify})}
 		\label{fig:Cur}
 \end{figure}
 
-<<<<<<< HEAD
+
 Among all the medical devices, there are devices with both diagnostic and therapeutic functions. These devices diagnose physiological condition of the patient and deliver therapy accordingly, which forms a closed-loop system with the patient. Their ability to (semi-) autonomously affect the physiological state of the patient makes the medical devices safety-critical, that these devices are usually classified into the highest risk category. and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients.
 \begin{figure}[t]
 		\centering
@@ -25,19 +25,8 @@ Among all the medical devices, there are devices with both diagnostic and therap
 		\caption{\small Closed-loop medical devices}
 		\label{fig:closed-loop}
 \end{figure}
-\section{Stakeholders}
-For each medical device, there are 4 stakeholders: the regulator, the device manufacturer, the medical professional and the patient. All parties have the incentive to ensure the safety and efficacy of the device. With current regulation framework, the evidence for safety 
-\begin{figure}[t]
-		\centering
-		\includegraphics[width=0.8\textwidth]{figs/stakeholders.pdf}
-		\caption{\small Figure of current medical devices}
-		\label{fig:Cur}
-\end{figure}
-=======
-Among different devices, there are devices with both diagnostic and therapeutic interact with the human body in closed-loop
 
 
->>>>>>> origin/master
 \section{The Big Problem: Safety Concern Due to Increased Software Complexity}
 Implantable medical devices such as cardiac pacemakers and defibrillators are designed to improve physiological conditions with very little human intervention. 
  Medical devices increasingly rely on software, and device function and their clinical performance can be affected by seemingly minor changes to software. Software embedded in a medical device, unlike electrical and mechanical components, does not fail due to corrosion, fatigue or have statistical failures of subcomponents. Software failures are uniquely sourced in the design and development of the system. Unlike other industries such as consumer electronics where product life cycles are measured in months, software engineering for medical devices often spans a decade and must prioritize safety and efficacy over time to market. 
