--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,7 +6,15 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
+@article {ELT,
+author = {FURMAN, SEYMOUR and FISHER, JOHN D.},
+title = {Endless Loop Tachycardia in an AV Universal (DDD) Pacemaker},
+journal = {Pacing and Clinical Electrophysiology},
+volume = {5},
+number = {4},
+pages = {486--489},
+year = {1982},
+}
 @article{trialcost,
 author="{US FDA}",
 title="{Human Subject Protection; Acceptance of Data from Clinical Studies for Medical Devices;
@@ -14,6 +22,19 @@ Proposed Rule}",
 journal={Docket No. FDA- 2013-N-0080},
 year={2013}
 }
+@article{classify,
+author="{Reinhard Busse}",
+title="{Medical devices: a taxonomy suitable for HTA}",
+journal={Presentation: Department of Health Care Management, Berlin University of Technology},
+year={2014}
+}
+@article{OECD,
+author="{OECD}",
+title="{Classification of Health Care Functions (ICHA-HC)}",
+journal={OECD/WHO/Eurostat, A System of Health Accounts: 2011 Edition},
+year={2011}
+}
+
 @article{EU_classify,
 author="{EUROPEAN COMMISSION DG HEALTH AND CONSUMER}",
 title="{MEDICAL DEVICES: Guidance document - Classification of medical devices}",
