--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,6 +15,15 @@ number = {4},
 pages = {486--489},
 year = {1982},
 }
+@article {Brain_sti,
+author = {Coffey, Robert J.},
+title = {Deep Brain Stimulation Devices: A Brief Technical History and Review},
+journal = {Artificial Organs},
+volume = {33},
+number = {3},
+pages = {208--220},
+year = {2009}
+}
 @article{trialcost,
 author="{US FDA}",
 title="{Human Subject Protection; Acceptance of Data from Clinical Studies for Medical Devices;
